# dspy-story-maker

./: .gitignore  README.md  main.py  pyproject.toml  run.sh  story_generation_experiments.ipynb  test_setup.py
src/: __init__.py
src/pipeline/: __init__.py  data_structures.py  story_generator.py  validator.py
src/tui/: __init__.py  app.py
