[project]
name = "dspy-story"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dspy>=3.0.3",
    "groq>=0.31.1",
    "ipython>=8.37.0",
    "jupyter>=1.1.1",
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.43",
]
